--- a/poo2/trabDev/RPGMaster/pom.xml
+++ b/poo2/trabDev/RPGMaster/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>FarmSim</artifactId>
+    <artifactId>RPGMaster</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-    <name>FarmSim</name>
+    <name>RPGMaster</name>
 </project>
