Adiciona tabelas e scripts para gerenciamento de raças e vacinas, além de implementar modelo de tabela genérico

--- a/poo2/jeanglazar_ifes-xfomehibernate_2025_1-b40270ae7f94/ConsultaProvaPOOIIV2/pom.xml
+++ b/poo2/jeanglazar_ifes-xfomehibernate_2025_1-b40270ae7f94/ConsultaProvaPOOIIV2/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ifes.edu.br</groupId>
-    <artifactId>XFomeHibernate_2025_1</artifactId>
+    <artifactId>ConsultaProvaPOOIIV2</artifactId>
     <version>1.0.1</version>
     <packaging>jar</packaging>
     <dependencies>
@@ -30,6 +30,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
+            <classifier>all</classifier>
         </dependency>
     </dependencies>
     <properties>
@@ -61,4 +67,5 @@
         </plugin>
         </plugins>
     </build>
+    <name>ConsultaProvaPOOIIV2</name>
 </project>
