Implementação do padrão Strategy para cálculo de frete
- Adicionada a classe CalculadoraDeFrete que utiliza a estratégia de cálculo de frete.
- Implementadas as classes de estratégia: FreteEconomico, FreteExpresso e FreteInternacional.
- Criada a interface CalculaFrete para definir o contrato das estratégias de cálculo.
- Implementado o método main para demonstrar o uso das diferentes estratégias de frete.
- Configuração do projeto Maven com pom.xml e nbactions.xml para execução e depuração.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /poo2/trabDev/FarmForm/target/
 /poo2/ConsultaProvaPOOIIV2/target/
+/projeto-sistemas/padroes-projeto/abstract factory/ExemploAbstractFactory/target/
