--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /poo2/trabDev/FarmForm/target/
 /poo2/ConsultaProvaPOOIIV2/target/
 /projeto-sistemas/padroes-projeto/abstract factory/ExemploAbstractFactory/target/
+
+/bd2/trabalho-interoperabilidade/
+/bd2/trabalhoOntologia/
