Atualiza regras do .gitignore para ignorar todos os arquivos em trabalho-interoperabilidade e trabalhoOntologia

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 /poo2/ConsultaProvaPOOIIV2/target/
 /projeto-sistemas/padroes-projeto/abstract factory/ExemploAbstractFactory/target/
 
-/bd2/trabalho-interoperabilidade/
-/bd2/trabalhoOntologia/
+/bd2/trabalho-interoperabilidade/*
+/bd2/trabalhoOntologia/*
