--- a/projeto-sistemas/padroes-projeto/template method/ExemploTemplateMethod/tsconfig.json
+++ b/projeto-sistemas/padroes-projeto/template method/ExemploTemplateMethod/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "none",
-    "outDir": "ExemploTemplateMethod/dist",
-    "rootDir": "ExemploTemplateMethod/src",
+    "outDir": "dist",
+    "rootDir": "src",
     "strict": true
   }
 }
