--- a/projeto-sistemas/padroes-projeto/template method/ExemploTemplateMethod/tsconfig.json
+++ b/projeto-sistemas/padroes-projeto/template method/ExemploTemplateMethod/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "none",
+    "module": "ESNext",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true
