--- a/projeto-sistemas/padroes-projeto/template method/ExemploTemplateMethod/tsconfig.json
+++ b/projeto-sistemas/padroes-projeto/template method/ExemploTemplateMethod/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "ESNext",
+    "module": "ES2020",
+    "moduleResolution": "node",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true
-  }
+  },
+  "include": ["src"]
 }
