Implement State Pattern for Mecha Behavior
- Created the main application class (Main.java) to demonstrate the Mecha's state transitions.
- Developed the Mecha class to manage its current state and handle actions like detecting enemies, receiving damage, and recovering energy.
- Defined the EstadoMecha interface to outline the methods for different states.
- Implemented various state classes: ModoPatrulha, ModoCombate, ModoDefensivo, and ModoDesativado, each with specific behaviors for the Mecha.
- Added project configuration files for NetBeans IDE, including project properties and build settings.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /bd2/trabalho-interoperabilidade/*
 /bd2/trabalhoOntologia/*
+/projeto-sistemas/padroes-projeto/state/ExemploState/nbproject/private/
+/projeto-sistemas/padroes-projeto/state/ExemploState/build/
