feat: atualizar ontologia com novas propriedades e indivíduos

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /bd2/trabalhoOntologia/*
 /projeto-sistemas/padroes-projeto/state/ExemploState/nbproject/private/
 /projeto-sistemas/padroes-projeto/state/ExemploState/build/
+/projeto-sistemas/padroes-projeto/state/ExemploState/dist/
