--- a/projeto-sistemas/padroes-projeto/bridge/ExemploBridge/.vscode/settings.json
+++ b/projeto-sistemas/padroes-projeto/bridge/ExemploBridge/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.c": "c",
         "*.mwb": "sql",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "string": "cpp"
     }
 }
