Add initial Jakarta EE configuration and resources
- Created persistence.xml for defining the persistence unit.
- Added JakartaRestConfiguration class for REST application setup.
- Implemented JakartaEE10Resource class with a sample endpoint for pinging.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /projeto-sistemas/padroes-projeto/state/ExemploState/nbproject/private/
 /projeto-sistemas/padroes-projeto/state/ExemploState/build/
 /projeto-sistemas/padroes-projeto/state/ExemploState/dist/
+/devWebII/WebApplication1/nbproject/private/
+/devWebII/WebApplication1/build/
+/devWebII/entrega0/target/
