Initialize MeuClienteUDP project with NetBeans configuration files and a basic UDP client structure
- Added project properties and configuration files for NetBeans IDE.
- Created main class MeuClienteUDP with a placeholder main method.
- Set Java version to 17 and configured build directories.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /devWebII/WebApplication1/nbproject/private/
 /devWebII/WebApplication1/build/
 /devWebII/entrega0/target/
+/SISTDIS/AplicacaoUDP/nbproject/private/
+/SISTDIS/MeuClienteUDP/nbproject/private/
