--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,5 +102,6 @@
     "streambuf": "cpp",
     "typeinfo": "cpp"
   },
-  "cmake.sourceDirectory": "/home/lucas/Documentos/ifes-3ano/SI-IFES-III/dispositivosmoveis/Mercadim/linux"
+  "cmake.sourceDirectory": "/home/lucas/Documentos/ifes-3ano/SI-IFES-III/dispositivosmoveis/Mercadim/linux",
+  "cmake.ignoreCMakeListsMissing": true
 }
