Adicionar classe Formulario e MeuCliente, além de atualizar o projeto para usar a nova estrutura de classes

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /devWebII/entrega0/target/
 /SISTDIS/AplicacaoUDP/nbproject/private/
 /SISTDIS/MeuClienteUDP/nbproject/private/
+/SISTDIS/MeuClienteUDP/build/
+/SISTDIS/AplicacaoUDP/build/
