--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /SISTDIS/MeuClienteUDP/nbproject/private/
 /SISTDIS/MeuClienteUDP/build/
 /SISTDIS/AplicacaoUDP/build/
+/SISTDIS/ControladorContador/nbproject/private/
+/SISTDIS/ControladorContador/build/
