Initial commit for tarefaAvaliativa01 project setup. Added project configuration files for NetBeans, including genfiles.properties, project.properties, and project.xml. Implemented basic structure for ClienteUDP and ServidorUDP classes. Created GUI forms and corresponding classes for TelaChat and TelaEntrada. Added utility classes Mensagem and Usuario with basic structure.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 SERINT/atividades/
 /SISTDIS/AplicacaoContaCorrenteEx/nbproject/private/
 /SISTDIS/AplicacaoContaCorrenteEx/build/
+/SISTDIS/tarefaAvaliativa01/nbproject/private/
