--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ SERINT/atividades/
 /SISTDIS/AplicacaoContaCorrenteEx/nbproject/private/
 /SISTDIS/AplicacaoContaCorrenteEx/build/
 /SISTDIS/tarefaAvaliativa01/nbproject/private/
+/SISTDIS/tarefaAvaliativa01/dist/
+/SISTDIS/tarefaAvaliativa01/build/
