--- a/SISTDIS/tarefaAvaliativa01/nbproject/project.properties
+++ b/SISTDIS/tarefaAvaliativa01/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=tarefaAvaliativa01
-main.class=servidor.TarefaAvaliativa01
+main.class=servidor.ServidorUDP
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
