--- a/devWebII/locadora/backend/build.gradle
+++ b/devWebII/locadora/backend/build.gradle
@@ -14,6 +14,10 @@ java {
 	}
 }
 
+springBoot {
+	mainClass = 'com.example.locadora.LocadoraApplication'
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
