--- a/devWebII/locadora/backend/src/main/resources/application.properties
+++ b/devWebII/locadora/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Conexão com PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/locadora_passatempo
-spring.datasource.username=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/locadora_passtempo
+spring.datasource.username=postgres
 spring.datasource.password=123
 
 # JPA/Hibernate
