feat: Implementar estrutura de repositório e casos de uso para gerenciamento de anúncios

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ SERINT/atividades/
 /SISTDIS/tarefaAvaliativa01/nbproject/private/
 /SISTDIS/tarefaAvaliativa01/dist/
 /SISTDIS/tarefaAvaliativa01/build/
+
+/dispositivosmoveis/calculadora-imc-master/
