--- a/devWebII/locadora/backend/src/main/resources/application.properties
+++ b/devWebII/locadora/backend/src/main/resources/application.properties
@@ -1,13 +1,1 @@
-# Conexão com PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/locadora_passtempo
-spring.datasource.username=postgres
-spring.datasource.password=123
-
-# JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Porta do servidor (opcional)
-server.port=8080
+spring.application.name=backend
