--- a/devWebII/locadora/backend/src/main/resources/application.properties
+++ b/devWebII/locadora/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=backend
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/locadora_passtempo
+spring.datasource.username=postgres
+spring.datasource.password=123
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Porta
+server.port=8080
