--- a/devWebII/locadora/backend/src/main/resources/application.properties
+++ b/devWebII/locadora/backend/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=backend
+spring.profiles.active=dev
+
+
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/locadora_passtempo
 spring.datasource.username=postgres
@@ -12,3 +15,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Porta
 server.port=8080
+spring.security.user.name=admin
+spring.security.user.password=123
