--- a/devWebII/locadora/frontend/package.json
+++ b/devWebII/locadora/frontend/package.json
@@ -1,27 +1,54 @@
 {
-  "name": "frontend",
+  "name": "sistema-de-video-locadora",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "author": "LUIS DAS ARTIMANHAS & LUCAS GARCIA",
+  "contact": "luisaugustodesouza785@gmail.com",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "set NO_COLOR=1 && npm install && vite",
+    "build": "npm run update && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "npm run update && vite preview",
+    "start": "npm run update && node --watch server.js",
+    "update": "npx npm-check-updates -u && npm install",
+    "dev-node": "node --watch --env-file=.env server.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^3.0.2",
+    "react-scripts":"0.2.3",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
+    "@eslint/js": "^9.19.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-regular-svg-icons": "^7.0.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^5.0.0",
+    "deploy": "file:..",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^16.0.0",
+    "vite": "^7.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react-swc": "^4.0.0",
-    "eslint": "^9.33.0",
+    "@eslint/js": "^9.35.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.2",
+    "react-scripts":"0.2.3",
+    "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "globals": "^16.4.0",
+    "vite": "^7.1.5",
+    "eslint-plugin-react": "^7.37.4"
   }
 }
