--- a/devWebII/locadora/backend/src/main/resources/application.properties
+++ b/devWebII/locadora/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.profiles.active=dev
 
 
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/locadora_passtempo
+spring.datasource.url=jdbc:postgresql://localhost:5432/locadora_passatempo
 spring.datasource.username=postgres
 spring.datasource.password=123
 
@@ -14,6 +14,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Porta
-server.port=8080
+server.port=8085
 spring.security.user.name=admin
 spring.security.user.password=123
