--- a/devWebII/locadora/backend/build.gradle
+++ b/devWebII/locadora/backend/build.gradle
@@ -27,7 +27,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'      // <-- necessário p/ API REST (Tomcat + MVC)
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-security' // se for usar segurança
+    // implementation 'org.springframework.boot:spring-boot-starter-security' // se for usar segurança
     implementation 'org.springframework.boot:spring-boot-starter-validation' // (opcional) @Valid, Bean Validation
 
     compileOnly 'org.projectlombok:lombok'
