--- a/devWebII/locadora/backend/src/main/resources/application.properties
+++ b/devWebII/locadora/backend/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Porta
 server.port=8085
-spring.security.user.name=admin
-spring.security.user.password=123
+# spring.security.user.name=admin
+# spring.security.user.password=123
