--- a/devWebII/locadora/frontend/package.json
+++ b/devWebII/locadora/frontend/package.json
@@ -6,48 +6,48 @@
   "contact": "luisaugustodesouza785@gmail.com",
   "type": "module",
   "scripts": {
-    "dev": "set NO_COLOR=1 && npm install && vite",
+    "dev": "set NO_COLOR=1 && npm install && npm run prepare-env && vite",
     "build": "npm run update && vite build",
     "lint": "eslint .",
     "preview": "npm run update && vite preview",
     "start": "npm run update && node --watch server.js",
-    "update": "npx npm-check-updates -u && npm install",
-    "dev-node": "node --watch --env-file=.env server.js"
+    "update": "npm run prepare-env && npx npm-check-updates -u && npm install",
+    "dev-node": "node --watch --env-file=.env server.js",
+    "prepare-env": "node src/js/createEnvIfMissing.js"
   },
   "dependencies": {
+    "@eslint/js": "^9.35.0",
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/free-regular-svg-icons": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
-    "react-scripts":"5.0.1",
-    "axios": "^1.12.1",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.2",
+    "axios": "^1.12.2",
     "dotenv": "^17.2.2",
+    "eslint": "^9.35.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.0",
-    "@eslint/js": "^9.19.0",
-    "@fortawesome/free-brands-svg-icons": "^7.0.0",
-    "@fortawesome/free-regular-svg-icons": "^7.0.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^16.0.0",
-    "vite": "^7.0.0"
+    "react-router-dom": "^7.9.1",
+    "vite": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
-    "react-scripts":"5.0.1",
     "eslint": "^9.35.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
-    "vite": "^7.1.5",
-    "eslint-plugin-react": "^7.37.4"
+    "react-scripts": "^0.0.0",
+    "vite": "^7.1.5"
   }
 }
