--- a/devWebII/locadora/frontend/package.json
+++ b/devWebII/locadora/frontend/package.json
@@ -1,19 +1,23 @@
 {
   "name": "sistema-de-video-locadora",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.4",
   "author": "LUIS DAS ARTIMANHAS & LUCAS GARCIA",
   "contact": "luisaugustodesouza785@gmail.com",
   "type": "module",
   "scripts": {
-    "dev": "set NO_COLOR=1 && npm install && npm run prepare-env && vite",
+    "dev": "set NO_COLOR=1 && npm run install && vite",
     "build": "npm run update && vite build",
     "lint": "eslint .",
     "preview": "npm run update && vite preview",
     "start": "npm run update && node --watch server.js",
-    "update": "npm run prepare-env && npx npm-check-updates -u && npm install",
+    "update": "node -v && npm run install && npx npm-check-updates -u && npm install",
     "dev-node": "node --watch --env-file=.env server.js",
-    "prepare-env": "node src/js/createEnvIfMissing.js"
+    "prepare-env": "node -v && node src/js/createEnvIfMissing.js",
+    "install":" npm install && node -v && npm run prepare-env"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "@eslint/js": "^9.35.0",
