--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ SERINT/
 /dispositivosmoveis/calculadora-imc-master/
 devWebII/locadora/frontend/.env
 /SISTDIS/projeto-ringo/target/
+/SISTDIS/tarefa7/target/
