Adiciona suporte à API de produção e atualiza chamadas para usar a nova instância

--- a/devWebII/locadora/frontend/package.json
+++ b/devWebII/locadora/frontend/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "main.jsx",
   "scripts": {
-    "dev": "set NO_COLOR=1 && npm run auto-install && vite",
+    "dev": "set NO_COLOR=1 && npm run auto-install && vite --host",
     "build": "npm run update && vite build",
     "lint": "eslint .",
     "preview": "npm run update && vite preview",
@@ -21,39 +21,40 @@
     "node": "^22.x"
   },
   "dependencies": {
-    "@eslint/js": "^9.36.0",
-    "@fortawesome/fontawesome-svg-core": "^7.0.1",
-    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@eslint/js": "^9.37.0",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
-    "@fortawesome/react-fontawesome": "^3.0.2",
-    "@types/react": "^19.1.17",
-    "@types/react-dom": "^19.1.11",
+    "@fortawesome/react-fontawesome": "^3.1.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^5.0.4",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "dotenv": "^17.2.3",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.3",
-    "vite": "^7.1.7"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.4",
+    "vite": "^7.1.9",
+    "vite-plugin-imagemin": "^0.6.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.17",
-    "@types/react-dom": "^19.1.11",
+    "@eslint/js": "^9.37.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
     "react-scripts": "^5.0.1",
-    "vite": "^7.1.7"
+    "vite": "^7.1.9"
   }
 }
