--- a/dispositivosmoveis/mercadim/pubspec.yaml
+++ b/dispositivosmoveis/mercadim/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   icons_launcher: ^3.0.2
+  firebase_core: ^3.0.0
+  cloud_firestore: ^5.0.0
+  firebase_auth: ^5.0.0
+  firebase_storage: ^12.0.0
 
 dev_dependencies:
   flutter_test:
