--- a/devWebII/locadora/backend/build.gradle
+++ b/devWebII/locadora/backend/build.gradle
@@ -22,6 +22,12 @@ configurations {
 
 repositories {
 	mavenCentral()
+    maven {
+            url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+            mavenContent {
+                snapshotsOnly()
+            }
+        }
 }
 
 dependencies {
@@ -29,6 +35,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // implementation 'org.springframework.boot:spring-boot-starter-security' // se for usar segurança
     implementation 'org.springframework.boot:spring-boot-starter-validation' // (opcional) @Valid, Bean Validation
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0-SNAPSHOT'
+
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
