--- a/devWebII/locadora/backend/build.gradle
+++ b/devWebII/locadora/backend/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.5.5'
-	id 'io.spring.dependency-management' version '1.1.7'
+    id 'java'
+    id 'org.springframework.boot' version '3.5.7'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.locadora'
@@ -9,47 +9,51 @@ version = '0.0.1-SNAPSHOT'
 description = 'API da Locadora'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
+    // Repositório adicional (opcional, para snapshots de bibliotecas em desenvolvimento)
     maven {
-            url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
-            mavenContent {
-                snapshotsOnly()
-            }
-        }
+        url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+        mavenContent { snapshotsOnly() }
+    }
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'      // <-- necessário p/ API REST (Tomcat + MVC)
+    // Spring Boot Starters
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    // implementation 'org.springframework.boot:spring-boot-starter-security' // se for usar segurança
-    implementation 'org.springframework.boot:spring-boot-starter-validation' // (opcional) @Valid, Bean Validation
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0-SNAPSHOT'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // SpringDoc OpenAPI (versão estável)
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
+    // Lombok (em tempo de compilação)
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // Banco de dados PostgreSQL
     runtimeOnly 'org.postgresql:postgresql'
 
+    // Ferramentas de desenvolvimento
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+    // Testes
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
