--- a/dispositivosmoveis/mercadim/pubspec.yaml
+++ b/dispositivosmoveis/mercadim/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^5.0.0
   firebase_auth: ^5.0.0
   firebase_storage: ^12.0.0
+  image_picker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
