--- a/devWebII/locadora/frontend/package.json
+++ b/devWebII/locadora/frontend/package.json
@@ -11,7 +11,7 @@
     "build": "npm run update && vite build",
     "lint": "eslint .",
     "preview": "npm run update && vite preview",
-    "start": "npm run update && node --watch server.js",
+    "start": "npm run update && set NO_COLOR=1 && vite --host",
     "update": "npm run auto-install && npx npm-check-updates -u",
     "dev-node": "node --watch --env-file=.env server.js",
     "prepare-env": "node src/js/createEnvIfMissing.js",
