--- a/dispositivosmoveis/mercadim/android/app/src/main/AndroidManifest.xml
+++ b/dispositivosmoveis/mercadim/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyD_LvXUFnaatN7Gn3HZFniaQ9B5Dz0wdKU"/>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
