--- a/dispositivosmoveis/mercadim/pubspec.yaml
+++ b/dispositivosmoveis/mercadim/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_auth: ^5.0.0
   firebase_storage: ^12.0.0
   image_picker: ^1.1.0
+  google_maps_flutter: ^2.5.0
+  google_place: ^0.4.7
 
 dev_dependencies:
   flutter_test:
