--- a/dispositivosmoveis/mercadim/pubspec.yaml
+++ b/dispositivosmoveis/mercadim/pubspec.yaml
@@ -31,20 +31,34 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Ícones padrão iOS
   cupertino_icons: ^1.0.8
+
+  # Gerência de estado
   flutter_riverpod: ^2.6.1
+
+  # Localização e geocodificação
   geolocator: ^13.0.2
   geocoding: ^3.0.0
-  icons_launcher: ^3.0.2
+  location: ^5.0.3
+
+  # Firebase core services (todos compatíveis entre si)
   firebase_core: ^3.0.0
   cloud_firestore: ^5.0.0
   firebase_auth: ^5.0.0
   firebase_storage: ^12.0.0
+
+  # Seleção de imagens
   image_picker: ^1.1.0
+
+  # Ícones personalizados (launcher)
+  icons_launcher: ^3.0.2
+
+  # Google Maps e Autocomplete
   google_maps_flutter: ^2.5.0
   google_place: ^0.4.7
+
+
 
 dev_dependencies:
   flutter_test:
