--- a/dispositivosmoveis/mercadim/pubspec.yaml
+++ b/dispositivosmoveis/mercadim/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   # Localização e geocodificação
   geolocator: ^13.0.2
   geocoding: ^3.0.0
-  location: ^5.0.3
+  # location: ^5.0.3
 
   # Firebase core services (todos compatíveis entre si)
   firebase_core: ^3.0.0
